{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 60,
  "lineage": "988b9e9c-c6f4-82b0-8414-d5436864348f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:loadbalancer/app/aus-fin-agent-dev-alb/f73252a809e7c0be",
            "arn_suffix": "app/aus-fin-agent-dev-alb/f73252a809e7c0be",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "aus-fin-agent-dev-alb-1751862073.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:loadbalancer/app/aus-fin-agent-dev-alb/f73252a809e7c0be",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aus-fin-agent-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0590ed2909d6286cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a0fa00a7b797258"
              },
              {
                "subnet_id": "subnet-083df693108f39de3"
              }
            ],
            "subnets": [
              "subnet-05a0fa00a7b797258",
              "subnet-083df693108f39de3"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "vpc_id": "vpc-0f9c10a7c1770655c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:listener/app/aus-fin-agent-dev-alb/f73252a809e7c0be/6869419b5bcae326",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:targetgroup/aus-fin-agent-dev-web/6c7b4e1c85c3bafc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:listener/app/aus-fin-agent-dev-alb/f73252a809e7c0be/6869419b5bcae326",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:loadbalancer/app/aus-fin-agent-dev-alb/f73252a809e7c0be",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.web",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:targetgroup/aus-fin-agent-dev-api/7dc87a282bcc1910",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:listener-rule/app/aus-fin-agent-dev-alb/f73252a809e7c0be/6869419b5bcae326/0b68bfaa8779f982",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api",
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:listener-rule/app/aus-fin-agent-dev-alb/f73252a809e7c0be/6869419b5bcae326/0b68bfaa8779f982",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:listener/app/aus-fin-agent-dev-alb/f73252a809e7c0be/6869419b5bcae326",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.api",
            "aws_lb_target_group.web",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:targetgroup/aus-fin-agent-dev-api/7dc87a282bcc1910",
            "arn_suffix": "targetgroup/aus-fin-agent-dev-api/7dc87a282bcc1910",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/api/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:targetgroup/aus-fin-agent-dev-api/7dc87a282bcc1910",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:loadbalancer/app/aus-fin-agent-dev-alb/f73252a809e7c0be"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aus-fin-agent-dev-api",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:targetgroup/aus-fin-agent-dev-web/6c7b4e1c85c3bafc",
            "arn_suffix": "targetgroup/aus-fin-agent-dev-web/6c7b4e1c85c3bafc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:targetgroup/aus-fin-agent-dev-web/6c7b4e1c85c3bafc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:060367163877:loadbalancer/app/aus-fin-agent-dev-alb/f73252a809e7c0be"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aus-fin-agent-dev-web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031a0c4ef4ab25bde",
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:elastic-ip/eipalloc-031a0c4ef4ab25bde",
            "association_id": "eipassoc-02d4821a020a3af8c",
            "domain": "vpc",
            "id": "eipalloc-031a0c4ef4ab25bde",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0f81927210f677945",
            "private_dns": "ip-10-10-0-193.ap-southeast-2.compute.internal",
            "private_ip": "10.10.0.193",
            "public_dns": "ec2-13-236-218-40.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.236.218.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-nat-eip",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-nat-eip",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:internet-gateway/igw-03fecbd10bcec6fce",
            "id": "igw-03fecbd10bcec6fce",
            "owner_id": "060367163877",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-igw",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-igw",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031a0c4ef4ab25bde",
            "association_id": "eipassoc-02d4821a020a3af8c",
            "connectivity_type": "public",
            "id": "nat-0063d1bf492c11bc8",
            "network_interface_id": "eni-0f81927210f677945",
            "private_ip": "10.10.0.193",
            "public_ip": "13.236.218.40",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-083df693108f39de3",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-nat",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-nat",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:route-table/rtb-0a416e644f577670e",
            "id": "rtb-0a416e644f577670e",
            "owner_id": "060367163877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0063d1bf492c11bc8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-private-rt",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-private-rt",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:route-table/rtb-01788914c05308606",
            "id": "rtb-01788914c05308606",
            "owner_id": "060367163877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fecbd10bcec6fce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-public-rt",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-public-rt",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013b66d77556530ef",
            "route_table_id": "rtb-0a416e644f577670e",
            "subnet_id": "subnet-05a27b5e8c80b1aeb"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095cf13880599d4c3",
            "route_table_id": "rtb-0a416e644f577670e",
            "subnet_id": "subnet-0a44a840f92d2c51c"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007b3767c5384e5e7",
            "route_table_id": "rtb-01788914c05308606",
            "subnet_id": "subnet-083df693108f39de3"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08282705dfd27f06d",
            "route_table_id": "rtb-01788914c05308606",
            "subnet_id": "subnet-05a0fa00a7b797258"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:security-group/sg-0590ed2909d6286cd",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0590ed2909d6286cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aus-fin-agent-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "060367163877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-alb-sg",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-alb-sg",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:security-group/sg-0fabb02c8949cfed6",
            "description": "ECS API security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fabb02c8949cfed6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0590ed2909d6286cd"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "aus-fin-agent-dev-ecs-api-sg",
            "name_prefix": "",
            "owner_id": "060367163877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-ecs-api-sg",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-ecs-api-sg",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:security-group/sg-08838d4b30e8266c4",
            "description": "ECS Web security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08838d4b30e8266c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0590ed2909d6286cd"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aus-fin-agent-dev-ecs-web-sg",
            "name_prefix": "",
            "owner_id": "060367163877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-ecs-web-sg",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-ecs-web-sg",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:security-group/sg-087f90c5ca3f0c99a",
            "description": "ECS Worker security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087f90c5ca3f0c99a",
            "ingress": [],
            "name": "aus-fin-agent-dev-ecs-worker-sg",
            "name_prefix": "",
            "owner_id": "060367163877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-ecs-worker-sg",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-ecs-worker-sg",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:security-group/sg-0775e07de4c73e72c",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0775e07de4c73e72c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087f90c5ca3f0c99a"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fabb02c8949cfed6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aus-fin-agent-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "060367163877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-rds-sg",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-rds-sg",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_security_group.ecs_api",
            "module.networking.aws_security_group.ecs_worker",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:subnet/subnet-05a27b5e8c80b1aeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.10.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a27b5e8c80b1aeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060367163877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-private-1",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-private-1",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:subnet/subnet-0a44a840f92d2c51c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.10.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a44a840f92d2c51c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060367163877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-private-2",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-private-2",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:subnet/subnet-083df693108f39de3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.10.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083df693108f39de3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060367163877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-public-1",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-public-1",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "public"
            },
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:subnet/subnet-05a0fa00a7b797258",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.10.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a0fa00a7b797258",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060367163877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-public-2",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-public-2",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "public"
            },
            "vpc_id": "vpc-0f9c10a7c1770655c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:060367163877:vpc/vpc-0f9c10a7c1770655c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0060274617667afb9",
            "default_route_table_id": "rtb-0707c1f9372dc042f",
            "default_security_group_id": "sg-0c6a0c4407a0771c9",
            "dhcp_options_id": "dopt-0bb896df44488ad5b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9c10a7c1770655c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0707c1f9372dc042f",
            "owner_id": "060367163877",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-vpc",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aus-fin-agent-dev-vpc",
              "Owner": "platform",
              "Project": "aus-fin-agent",
              "Tier": "development"
            }
          }
        }
      ]
    }
  ]
}